Created section1 branch

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
             <li><a href="#">Services</a></li>
         </ul>
     </nav>
+
+    <div class="section1">
+        <div class="section">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo alias, in quibusdam facilis ipsa quam optio consectetur! Pariatur aliquid suscipit unde vitae incidunt distinctio ipsa quis, id magnam aut quo dicta earum officiis quos qui odio sequi ut in placeat explicabo. Corporis commodi eius dolore magni minus, eos sequi quasi?</p>
+        </div>
+        <div class="section">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil magni sint hic fuga qui quis aliquam iure nobis quidem quisquam quasi deleniti veniam quibusdam, aliquid quas facilis, vitae, pariatur tenetur error? Perspiciatis, quaerat harum! Vero dicta aut nobis! Maiores, soluta?</p>
+        </div>
+    </div>
 </body>
 
 </html>
